# fund-python-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repomix.config.json
ai/: 1.prompt.md  2.prompt.md
alembic/: env.py
alembic/versions/: 86699794340a_update_server_default.py  a0ed9bc3e231_init.py
docs/: api.md
src/python_cli_starter/: charts.py  database.py  main.py  market.py  market_analysis.py  schemas.py  services.py
src/python_cli_starter/strategies/: __init__.py  bollinger_bands_strategy.py  dual_confirmation_strategy.py  macd_strategy.py  rsi_strategy.py
tests/: conftest.py  test_api.py  test_charts.py  test_strategies.py
