[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'fund-strategies-api'
version = '1.0.0'
description = '基金策略分析 API 服务'
readme = 'README.md'
requires-python = '>=3.10'
license = 'MIT'
authors = [
  { name = 'lanseria', email = 'zhangchao564265135@hotmail.com' },
]

dependencies =[
  'fastapi>=0.115.12',
  'uvicorn[standard]>=0.38.0',
  'pydantic>=2.11.4',
  'pandas>=2.0.0',
  'akshare>=1.17.87',
  "numpy>=2.0.2",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "playwright>=1.41.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "apscheduler>=3.10.4",
  "python-dotenv>=1.0.0",
  "alembic>=1.18.4",
]

[project.optional-dependencies]
test = [
  'pytest>=8.0.0',
  'pytest-asyncio>=0.23.0',
  'httpx>=0.25.0',
]

[tool.hatch.build.targets.wheel]
packages = ['src/python_cli_starter']

[[tool.uv.index]]
url = 'https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple'
default = true
